# components-flyio

./: .envrc-example  .gitignore  Cargo.toml  Justfile  README.md  dev-deps.txt  flake.nix  obelisk-local.toml  obelisk-oci.toml
.github/workflows/: check-test-unit.yml  check.yml  push-components.yml  sync-flake-lock.yml
activity-fly-http/: Cargo.toml
activity-fly-http/src/: lib.rs  machine.rs  serde.rs  volume.rs
activity-fly-http/src/snapshots/: activity_fly_http__machine__tests__machine_deserialization.snap  activity_fly_http__volume__tests__volume_deserialization.snap  fly_http__machine__tests__machine_deserialization.snap  fly_http__volume__tests__volume_deserialization.snap
activity/fly-http/impl/: Cargo.toml  build.rs
activity/fly-http/impl/src/: app.rs  ips.rs  lib.rs  machine.rs  secret.rs  volume.rs  wstd_util.rs
activity/fly-http/impl/src/snapshots/: activity_fly_http__machine__tests__machine_deserialization.snap
activity/fly-http/wit/obelisk-flyio_activity-fly-http-obelisk-ext@1.0.0-beta/: activity-fly-http-obelisk-ext.wit
activity/fly-http/wit/obelisk-flyio_activity-fly-http@1.0.0-beta/: fly.wit
docker/: obelisk-local.toml  obelisk-oci.toml
docker/activity-docker/: Cargo.toml  build.rs
docker/activity-docker/src/: containers.rs  lib.rs  networks.rs
docker/activity-docker/wit/: impl.wit
docker/activity/src/: docker_cli.rs  volumes.rs
docker/activity/wit/obelisk-docker_activity-docker@0.1.0/: docker.wit
fly/: README.md  fly-http-machine-config.json.sh  obelisk-local.toml  obelisk-oci.toml
fly-http/: Cargo.toml
fly-http/src/: app.rs  lib.rs  machine.rs  secret.rs  volume.rs
fly-http/src/snapshots/: fly_http__machine__tests__machine_deserialization.snap  fly_http__volume__tests__volume_deserialization.snap
fly-http/wit/: impl.wit
fly-http/wit/activity-flyio_fly-http-obelisk-ext@1.0.0-beta/: fly-http-obelisk-ext.wit
fly-http/wit/activity-flyio_fly-http-obelisk-schedule@1.0.0-beta/: fly-http-obelisk-schedule.wit
fly-http/wit/activity-flyio_fly-http@1.0.0-beta/: fly.wit  regions.wit
fly-http/wit/obelisk-flyio_fly-http-obelisk-ext@1.0.0-beta/: fly-http-obelisk-ext.wit
fly-http/wit/obelisk-flyio_fly-http-obelisk-schedule@1.0.0-beta/: fly-http-obelisk-schedule.wit
fly-http/wit/obelisk-flyio_fly-http@1.0.0-beta/: fly.wit  regions.wit
fly/activity-fly-http/: build.rs
fly/activity-fly-http/src/: ips.rs  lib.rs  machine.rs
fly/activity-fly-http/src/snapshots/: activity_fly_http__machine__tests__machine_deserialization.snap  activity_fly_http__volume__tests__volume_deserialization.snap
fly/activity-fly-http/wit/: impl.wit
fly/activity-fly-http/wit/obelisk-flyio_activity-fly-http@1.0.0-beta/: fly.wit
obelisk/: obelisk-local.toml  obelisk-oci.toml
obelisk/activity-obelisk-client-http/: Cargo.toml  build.rs
obelisk/activity-obelisk-client-http/.cargo/: config.toml
obelisk/activity-obelisk-client-http/src/: lib.rs
obelisk/activity-obelisk-client-http/wit/: impl.wit
obelisk/activity-obelisk-client-http/wit/obelisk-client_api-http/: executions.wit
scripts/: dev-deps.sh  fly-http-machine-config.json.sh  obelisk-generate-extensions.sh  obelisk-regen.sh  push-components.sh
webhook-fly-secrets-updater/: Cargo.toml
webhook-secrets-endpoint/: Cargo.toml
webhook-secrets-endpoint/src/: lib.rs
webhook/fly-secrets-updater/impl/src/: lib.rs
