[workspace]
resolver = "2"
members = [
    "activity/fly-http/impl",
    "webhook/fly-secrets-updater/impl",
]

[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["Project Developers"]
edition = "2024"
repository = "TBD"
rust-version = "1.89.0"

[workspace.dependencies]
anyhow = "1.0"
assert_matches = "1.5.0"
derive_more = { version = "2.0.1", features = ["debug", "display", "from"] }
heck = "0.5.0"
insta = "1.43.2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wstd = "0.5.6"
wit-bindgen = "0.47.0"
wit-bindgen-rust = "0.47.0"
wit-parser = "0.240.0"

[profile.release]
opt-level = "s"
debug = "line-tables-only"
