[workspace]
resolver = "2"
members = [
    "activity/fly-http/impl",
    "webhook/fly-secrets-updater/impl",
]

[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["Project Developers"]
edition = "2024"
repository = "TBD"
rust-version = "1.89.0"

[workspace.dependencies]
anyhow = "1.0"
assert_matches = "1.5.0"
derive_more = { version = "2.0.1", features = ["debug", "display", "from"] }
heck = "0.5.0"
insta = "1.44.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wstd = "0.6.3"
wit-bindgen = "0.48.1"
wit-bindgen-rust = "0.48.1"
wit-parser = "0.242.0"

[profile.release]
opt-level = "s"
debug = "line-tables-only"
