[workspace]
resolver = "2"
members = [
    "docker/activity-docker",
    "fly/activity-fly-http",
    "fly/webhook-fly-secrets-updater",
    "obelisk/activity-obelisk-client-http",
]

[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["Project Developers"]
edition = "2024"
repository = "TBD"
rust-version = "1.89.0"

[workspace.dependencies]
anyhow = "1.0"
assert_matches = "1.5.0"
derive_more = { version = "2.1.1", features = ["debug", "display", "from"] }
futures-concurrency = "7.6.3"
heck = "0.5.0"
insta = "1.46.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "1.2.1"
wasip2 = "1.0.1"
wit-bindgen  = "0.50.0"
wit-bindgen-rust = "0.50.0"
wit-parser = "0.244.0"
wstd = "0.6.4"

[profile.release]
opt-level = "s"

[profile.release_activity]
inherits = "release"
strip = "debuginfo"

[profile.release_webhook]
inherits = "release"
debug = "line-tables-only"
