[package]
name = "activity-fly-http"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
wit-bindgen.workspace = true
wstd.workspace = true

[dev-dependencies]
assert_matches.workspace = true
insta.workspace = true
