[package]
name = "fly-webhook-secrets-endpoint"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
wstd.workspace = true
