[package]
name = "activity-docker"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
wasip2.workspace = true
wit-bindgen.workspace = true
wstd.workspace = true
futures-concurrency = "7.6"

[build-dependencies]
wit-bindgen-rust.workspace = true

