[package]
name = "activity-obelisk-client-http"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid = "1.2.1"
wit-bindgen.workspace = true
wstd.workspace = true

[build-dependencies]
anyhow.workspace = true
wit-bindgen-rust.workspace = true
wit-parser.workspace = true
